# provola

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  cicd.yml  release.yml  rust.yml
crates/app/: main.rs
crates/core/: Cargo.toml
crates/core/src/: code.rs  collection.rs  error.rs  lib.rs  named.rs  pending_report.rs  report.rs  report_data.rs  test_case.rs  test_suite.rs  testable.rs
crates/core/tests/: integration_test.rs
docs/: CONTRIBUTING.md
examples/: app_to_be_tests.rs
icon/: provola-icon.kra
provola/: Cargo.toml  README.md
provola-catch2/: Cargo.toml
provola-catch2/examples/data/: .gitignore  CMakeLists.txt  test_report.xml
provola-catch2/examples/data/src/: tests.cpp
provola-catch2/examples/data/tools/: generate-json-report  generate-junit-report
provola-catch2/src/: lib.rs  report.rs
provola-catch2/src/snapshots/: provola_catch2__report__tests__convert_to_core_report.snap  provola_catch2__report__tests__parse_xml_report.snap
provola-core/: Cargo.toml
provola-core/examples/data/: app_to_be_tested.c  app_to_be_tested.cpp  app_to_be_tested.hs  app_to_be_tested.rs  app_to_be_tested.sh  app_with_wrong_result.rs
provola-core/src/: actions.rs  build.rs  code.rs  collection.rs  errors.rs  exec.rs  lang.rs  lib.rs  named.rs  report.rs  reporter.rs  result.rs  test_case.rs  test_runners.rs  test_suite.rs  testable.rs  watch.rs
provola-core/src/test/: data.rs  mod.rs  tests.rs  xunit.rs
provola-core/tests/: integration_test.rs
provola-egui/: Cargo.toml
provola-egui/src/: app.rs  central_panel.rs  lib.rs  server.rs  tests_explorer.rs
provola-googletest/: Cargo.toml
provola-googletest/examples/data/: CMakeLists.txt  test_report.json
provola-googletest/examples/data/src/: tests.cpp
provola-googletest/examples/data/tools/: generate-json-report
provola-googletest/src/: lib.rs  report.rs
provola-googletest/src/snapshots/: provola_googletest__report__tests__convert_to_core_report.snap  provola_googletest__report__tests__parse_json_report.snap  provola_googletest__tests__parse_gtest_list_tests_output.snap
provola-gtk/: Cargo.toml
provola-gtk/src/: lib.rs
provola-reporters/: Cargo.toml
provola-reporters/src/: lib.rs
provola-terminalreporter/: Cargo.toml
provola-terminalreporter/src/: colorful.rs  lib.rs  simple.rs
provola-terminalreporter/src/snapshots/: provola_terminalreporter__colorful__test__report_fail_reason.snap  provola_terminalreporter__colorful__test__report_pass.snap  provola_terminalreporter__simple__test__report_fail_reason.snap  provola_terminalreporter__simple__test__report_pass.snap  provola_terminalreporter__test__report_fail_reason.snap  provola_terminalreporter__test__report_pass.snap
provola-testrunners/: Cargo.toml
provola-testrunners/src/: lib.rs
provola/src/: cli.rs  main.rs
provola_core/: Cargo.toml
provola_core/src/: code.rs  error.rs  lib.rs  report.rs  report_future.rs  test_case.rs  test_suite.rs  testable.rs
provola_core/tests/: integration_test.rs
src/: cli.rs  main.rs
tools/: _common  dev-setup  edit-all-cargo-toml  publish-all  update-all-versions
