[package]
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
categories = ["development-tools"]
description = "A tool for quick development/test cycle in any language"
documentation = "https://github.com/alepez/provola"
edition = "2021"
homepage = "https://github.com/alepez/provola"
keywords = ["test"]
license = "MIT/Apache-2.0"
name = "provola"
readme = "README.md"
repository = "https://github.com/alepez/provola"
rust-version = "1.65"
version = "1.0.0"  #:version

[[bin]]
path = "crates/app/main.rs"
name = "provola"

[workspace]
members = [
  "crates/core",
]

[dependencies]

[build-dependencies]

[dev-dependencies]

[features]
