[package]
name = "provola-core"
version = "0.1.0"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2018"
description = "A tool for quick development/test cycle in any language"
homepage = "https://github.com/alepez/provola"
repository = "https://github.com/alepez/provola"
readme = "README.md"
license = "Apache License 2.0"
exclude = [
    "examples/*",
]

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subprocess = "0.2"
thiserror = "1.0"

