[package]
name = "provola-core"
version = "0.1.5"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2018"
description = "A tool for quick development/test cycle in any language"
homepage = "https://github.com/alepez/provola"
repository = "https://github.com/alepez/provola"
readme = "README.md"
license = "Apache-2.0"
exclude = [ "examples/*" ]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.0"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.23"
strum_macros = "0.23"
subprocess = "0.2"
thiserror = "1.0"
