[package]
name = "provola-egui"
version = "0.1.7"
edition = "2021"
description = "provola GTK gui"
homepage = "https://github.com/alepez/provola"
repository = "https://github.com/alepez/provola"
license = "Apache-2.0"

[dependencies]
futures = "0.3"
log = "0.4"
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"], optional = true }
merge = "0.1.0"

[dependencies.provola-core]
version = "0.1.7"
path = "../provola-core"

[dependencies.provola-testrunners]
version = "0.1.7"
path = "../provola-testrunners"

[dependencies.provola-reporters]
version = "0.1.7"
path = "../provola-reporters"

[dependencies.eframe]
eframe = "0.15.0"

[features]
default = ["persistence"]
persistence = ["eframe/persistence", "serde"]
