[package]
name = "provola-googletest"
version = "0.1.5"
edition = "2018"
description = "provola extension for googletest"
homepage = "https://github.com/alepez/provola"
repository = "https://github.com/alepez/provola"
license = "Apache-2.0"

[dependencies]
chrono = "0.4"
log = "0.4"
provola-core = { version = "0.1.5", path = "../provola-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subprocess = "0.2"
