[package]
name = "provola-googletest"
version = "0.2.0"
edition = "2021"
description = "provola extension for googletest"
homepage = "https://github.com/alepez/provola"
repository = "https://github.com/alepez/provola"
license = "MIT/Apache-2.0"

[dependencies]
chrono = "0.4"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subprocess = "0.2"

[dependencies.provola-core]
version = "0.2.0"
path = "../provola-core"

[dev-dependencies]
# backtrace feature is enabled so we can run tests without concurrency
insta = { version = "1.8.0", features = [ "backtrace" ] }
