[package]
name = "provola-reporters"
version = "0.1.7"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2021"
description = "A tool for quick development/test cycle in any language"
homepage = "https://github.com/alepez/provola"
repository = "https://github.com/alepez/provola"
readme = "../README.md"
license = "MIT/Apache-2.0"

[dependencies]
lazy_static = "1.0"
strum = "0.23"
strum_macros = "0.23"

[dependencies.provola-core]
version = "0.1.7"
path = "../provola-core"

[dependencies.provola-terminalreporter]
version = "0.1.7"
path = "../provola-terminalreporter"
optional = true

[features]
default = [
  "terminalreporter",
]
terminalreporter = [ "provola-terminalreporter" ]
