[package]
name = "provola-terminalreporter"
version = "0.1.8"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2021"
description = "A tool for quick development/test cycle in any language"
homepage = "https://github.com/alepez/provola"
repository = "https://github.com/alepez/provola"
readme = "../README.md"
license = "MIT/Apache-2.0"

[dependencies]
colored = "2.0.0"

[dependencies.provola-core]
version = "0.1.8"
path = "../provola-core"

[dev-dependencies]
# backtrace feature is enabled so we can run tests without concurrency
insta = { version = "1.8.0", features = [ "backtrace" ] }
