[package]
name = "provola-testrunners"
version = "0.1.5"
edition = "2018"
homepage = "https://github.com/alepez/provola"
repository = "https://github.com/alepez/provola"
license = "Apache-2.0"

[dependencies]
provola-core = { version = "0.1.5", path = "../provola-core" }
provola-googletest = { version = "0.1.5", path = "../provola-googletest" }
