[package]
name = "provola-testrunners"
version = "0.1.5"
edition = "2018"
description = "provola extension for test runners"
homepage = "https://github.com/alepez/provola"
repository = "https://github.com/alepez/provola"
license = "Apache-2.0"

[dependencies.provola-core]
version = "0.1.5"
path = "../provola-core"

[dependencies.provola-googletest]
version = "0.1.5"
path = "../provola-googletest"
optional = true

[features]
default = [
  "googletest",
]
googletest = [ "provola-googletest" ]
