[package]
name = "provola-testrunners"
version = "0.1.7"
edition = "2021"
description = "provola extension for test runners"
homepage = "https://github.com/alepez/provola"
repository = "https://github.com/alepez/provola"
license = "Apache-2.0"

[dependencies]
strum = "0.23"
strum_macros = "0.23"

[dependencies.provola-core]
version = "0.1.7"
path = "../provola-core"

[dependencies.provola-googletest]
version = "0.1.7"
path = "../provola-googletest"
optional = true

[dependencies.provola-catch2]
version = "0.1.7"
path = "../provola-catch2"
optional = true

[dependencies.serde]
version = "1"
features = ["derive"]

[features]
default = [
  "googletest",
  "catch2",
]
googletest = [ "provola-googletest" ]
catch2 = [ "provola-catch2" ]
