[package]
name = "provola-cli"
version = "0.1.0"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2018"
description = "A tool for quick development/test cycle in any language"
homepage = "https://github.com/alepez/provola"
repository = "https://github.com/alepez/provola"
readme = "README.md"
license-file = "../LICENSE"

[dependencies]
env_logger = "0.9"
log = "0.4"
provola-core = "0.1"
structopt = { version = "0.3" }
