[package]
name = "provola"
version = "0.1.1"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2018"
description = "A tool for quick development/test cycle in any language"
homepage = "https://github.com/alepez/provola"
repository = "https://github.com/alepez/provola"
readme = "README.md"
license = "Apache License 2.0"

[dependencies]
env_logger = "0.9"
log = "0.4"
provola-core = "0.1"
structopt = { version = "0.3" }
