[package]
name = "provola"
version = "0.1.2"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2018"
description = "A tool for quick development/test cycle in any language"
homepage = "https://github.com/alepez/provola"
repository = "https://github.com/alepez/provola"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
clap = "3.0.0-beta.5"
clap_generate = "3.0.0-beta.5"
env_logger = "0.9"
log = "0.4"
notify = "4"
provola-core = { version = "0.1", path = "../provola-core" }
