[package]
name = "provola_core"
version = "1.0.0"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2021"
description = "provola, fundamental data"
homepage = "https://github.com/alepez/provola"
repository = "https://github.com/alepez/provola"
readme = "README.md"
license = "MIT/Apache-2.0"
rust-version = "1.65"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
notify = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.23"
strum_macros = "0.23"
subprocess = "0.2"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
