[package]
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
description = "provola, fundamental data"
edition = "2021"
homepage = "https://github.com/alepez/provola"
license = "MIT/Apache-2.0"
name = "provola-core"
readme = "README.md"
repository = "https://github.com/alepez/provola"
rust-version = "1.65"
version = "1.0.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
notify = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.23"
strum_macros = "0.23"
subprocess = "0.2"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
