[package]
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
description = "provola, fundamental data"
edition = "2021"
homepage = "https://github.com/alepez/provola"
license = "MIT/Apache-2.0"
name = "provola-core"
readme = "README.md"
repository = "https://github.com/alepez/provola"
rust-version = "1.65"
version = "1.0.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
